[package]
name = "umsh-mac"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://darconeous.github.io/umsh/docs/rust/umsh_mac/"

[features]
default = ["std"]
std = ["umsh-core/std", "umsh-crypto/std", "umsh-hal/std"]
alloc = []
software-crypto = ["umsh-crypto/software-crypto"]
unsafe-advanced = []

[dependencies]
embedded-hal-async.workspace = true
hamaddr.workspace = true
heapless.workspace = true
rand.workspace = true
umsh-core = { path = "../umsh-core", default-features = false }
umsh-crypto = { path = "../umsh-crypto", default-features = false }
umsh-hal = { path = "../umsh-hal", default-features = false }
