[package]
name = "umsh-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std", "chat-rooms", "software-crypto"]
std = ["alloc", "umsh-app/std", "umsh-core/std", "umsh-crypto/std", "umsh-hal/std", "umsh-mac/std"]
unsafe-advanced = ["umsh-mac/unsafe-advanced"]
alloc = []
chat-rooms = ["umsh-app/chat-rooms"]
software-crypto = ["umsh-crypto/software-crypto", "umsh-mac/software-crypto"]

[dependencies]
heapless.workspace = true
umsh-app = { path = "../umsh-app", default-features = false }
umsh-core = { path = "../umsh-core", default-features = false }
umsh-crypto = { path = "../umsh-crypto", default-features = false }
umsh-hal = { path = "../umsh-hal", default-features = false }
umsh-mac = { path = "../umsh-mac", default-features = false }

[dev-dependencies]
rand.workspace = true