[package]
name = "umsh-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std", "software-crypto"]
std = ["alloc", "umsh-core/std", "umsh-crypto/std", "umsh-hal/std", "umsh-mac/std"]
unsafe-advanced = ["umsh-mac/unsafe-advanced"]
alloc = []
software-crypto = ["umsh-crypto/software-crypto", "umsh-mac/software-crypto"]

[dependencies]
bitflags.workspace = true
heapless.workspace = true
umsh-core = { path = "../umsh-core", default-features = false }
umsh-crypto = { path = "../umsh-crypto", default-features = false }
umsh-hal = { path = "../umsh-hal", default-features = false }
umsh-mac = { path = "../umsh-mac", default-features = false }

[dev-dependencies]
rand.workspace = true
umsh-text = { path = "../umsh-text", default-features = false, features = ["software-crypto"] }
