[package]
name = "umsh-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://darconeous.github.io/umsh/docs/rust/umsh_sync/"

[features]
default = []

[dependencies]
slab = { version = "0.4", default-features = false }

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }
