[package]
name = "umsh-text"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://darconeous.github.io/umsh/docs/rust/umsh_text/"

[features]
default = ["std", "software-crypto"]
std = ["alloc", "node", "umsh-core/std", "umsh-mac/std", "umsh-node/std"]
alloc = []
node = ["dep:umsh-mac", "dep:umsh-node", "alloc"]
software-crypto = ["node", "umsh-node/software-crypto"]

[dependencies]
umsh-core = { path = "../umsh-core", default-features = false }
umsh-mac = { path = "../umsh-mac", default-features = false, optional = true }
umsh-node = { path = "../umsh-node", default-features = false, optional = true }
heapless = { workspace = true }
