[package]
name = "umsh-uri"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["alloc", "bs58/std", "lwuri/std", "umsh-core/std"]
alloc = ["bs58/alloc", "lwuri/alloc", "umsh-core/alloc"]

[dependencies]
bs58.workspace = true
lwuri.workspace = true
umsh-core = { path = "../umsh-core", default-features = false }
