[package]
name = "umsh-uri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://darconeous.github.io/umsh/docs/rust/umsh_uri/"

[features]
default = ["std"]
std = ["alloc", "lwuri/std", "umsh-core/std"]
alloc = ["lwuri/alloc", "umsh-core/alloc"]

[dependencies]
lwuri.workspace = true
umsh-core = { path = "../umsh-core", default-features = false }
