[package]
name = "firmware-companion-cli-t1000e"
description = "T1000-E companion-radio CLI firmware binary"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Binary glue crate: composes umsh-bsp-t1000e + umsh-app-companion-cli.
#
# This crate pins the embedded target via .cargo/config.toml and owns
# memory.x. It is intentionally excluded from the workspace's
# `default-members` so root-level `cargo check` / `cargo build` does not
# try to cross-compile it on the developer's host.
#
# Build:    cd firmware/companion-cli-t1000e && cargo build --release
#           (or `cargo build -p firmware-companion-cli-t1000e` from anywhere,
#            but then the firmware's .cargo/config.toml is not consulted and
#            you must supply --target).
#
# See docs/firmware-architecture.md and docs/firmware-plan-t1000e.md.

[[bin]]
name = "firmware-companion-cli-t1000e"
path = "src/main.rs"

[dependencies]
umsh-bsp-t1000e    = { path = "../../crates/umsh-bsp-t1000e",    default-features = false }
umsh-bsp-nrf52840  = { path = "../../crates/umsh-bsp-nrf52840",  default-features = false }
umsh-app-companion-cli = { path = "../../crates/umsh-app-companion-cli", default-features = false }
umsh-ux-tracker    = { path = "../../crates/umsh-ux-tracker",    default-features = false }

# Embedded-only deps. Gated on `target_os = "none"` so this crate still
# parses and trivially compiles on host (as an empty `fn main()`),
# letting `cargo check --workspace` succeed without the bare-metal target
# installed. Real firmware builds use the embedded target via the
# .cargo/config.toml in this directory.
[target.'cfg(target_os = "none")'.dependencies]
cortex-m     = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt  = { version = "0.7", features = ["set-vtor"] }
embassy-executor = { version = "0.10", default-features = false, features = ["platform-cortex-m", "executor-thread", "embassy-time-driver"] }
embassy-time     = { version = "0.5", default-features = false, features = ["tick-hz-32_768"] }
embassy-nrf      = { version = "0.10", default-features = false, features = ["nrf52840", "time-driver-rtc1", "gpiote", "rt"] }
embassy-usb      = { version = "0.6", default-features = false }
embassy-futures  = { version = "0.1", default-features = false }
embassy-sync     = { version = "0.6", default-features = false }
static_cell      = "2"
heapless         = { version = "0.8", default-features = false }

# LR1110 radio. lora-phy is patched at the workspace root to our forked
# `lora-rs` so the LR1110 RF-switch configuration can be supplied per board.
lora-phy           = { workspace = true }
embedded-hal-bus   = { version = "0.3", default-features = false, features = ["async"] }
# lora-phy 3.x has a hard dep on `defmt`. We supply a no-op global logger
# inside the firmware so this stays a zero-overhead pass-through (matches
# hello-techo).
defmt              = { version = "0.3", default-features = false }
