[package]
name = "firmware-companion-cli-techo"
description = "LilyGO T-Echo bringup firmware (USB-CDC + heartbeat + e-paper hello-world)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Minimal bringup firmware for the LilyGO T-Echo. Does not pretend to
# be a "real" companion-radio or repeater — it is a stepping stone
# whose only jobs are to validate the embassy / UF2 / flash workflow
# and prove out the safety primitives (1200-baud reset, escape rescue,
# panic-persist, WDT) on a recoverable device before pointing the same
# patterns at the sealed T1000-E.
#
# See docs/firmware-plan-techo.md for the full plan.
#
# Like the other firmware crates, this is in `workspace.members` but
# NOT in `default-members`, so root-level `cargo check` does not try
# to cross-compile it on the developer's host.

[[bin]]
name = "firmware-companion-cli-techo"
path = "src/main.rs"

[dependencies]
umsh-bsp-techo = { path = "../../crates/umsh-bsp-techo", default-features = false, features = ["display", "platform", "power"] }
umsh-bsp-nrf52840 = { path = "../../crates/umsh-bsp-nrf52840", default-features = false }
umsh-radio-loraphy = { path = "../../crates/umsh-radio-loraphy", default-features = false }
heapless = { version = "0.8", default-features = false }
umsh-ux-tracker = { path = "../../crates/umsh-ux-tracker", default-features = false }
embedded-graphics = { version = "0.8", default-features = false }

# Embedded-only deps. Gated on `target_os = "none"` so this crate still
# parses and trivially compiles on host as an empty `fn main()`. The
# real firmware build uses the embedded target via the .cargo/config.toml
# in this directory.
[target.'cfg(target_os = "none")'.dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["set-vtor"] }
embassy-executor = { version = "0.10", default-features = false, features = ["platform-cortex-m", "executor-thread", "embassy-time-driver"] }
embassy-time = { version = "0.5", default-features = false, features = ["tick-hz-32_768"] }
embassy-nrf = { version = "0.11", default-features = false, features = ["nrf52840", "time-driver-rtc1", "gpiote", "rt"] }
embassy-usb = { version = "0.6", default-features = false }
embassy-futures = { version = "0.1", default-features = false }
static_cell = "2"
# SX1262 LoRa radio driver and supporting crates.
lora-phy = { workspace = true }
embedded-hal-bus = { version = "0.3", default-features = false, features = ["async"] }
# embassy-sync for the static radio channels.
embassy-sync = { version = "0.8", default-features = false }
# lora-phy 3.0.x unconditionally depends on defmt 0.3. We provide a
# no-op global logger so the firmware links without a debug transport.
defmt = "0.3"
# UMSH MAC coordinator and software crypto (Phase 6: MAC integration).
# embedded-alloc provides the global heap required by umsh-sync (used by MacHandle).
embedded-alloc = { version = "0.5", default-features = false }
umsh-mac = { path = "../../crates/umsh-mac", default-features = false, features = ["software-crypto"] }
umsh-hal = { path = "../../crates/umsh-hal", default-features = false }
umsh-crypto = { path = "../../crates/umsh-crypto", default-features = false, features = ["software-crypto"] }
umsh-cli = { path = "../../crates/umsh-cli", default-features = false, features = ["alloc"] }
umsh-core = { path = "../../crates/umsh-core", default-features = false }
umsh-node = { path = "../../crates/umsh-node", default-features = false, features = ["alloc", "software-crypto"] }
umsh-sync = { path = "../../crates/umsh-sync", default-features = false }
rand = { workspace = true }
