[package]
name = "firmware-companion-ncp-t1000e"
description = "Seeed SenseCAP T1000-E companion-radio NCP firmware over USB-CDC and BLE GATT"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["t1000e"]
t1000e = []
# Diagnostic build: skip MPSL/SDC/Trouble entirely (USB-only NCP) while
# keeping the BLE clock configuration, to isolate the post-DFU
# first-boot watchdog freeze. Not a production configuration.
no-ble = []
ble-debug = ["trouble-host/security-debug"]
ble-store-fault-inject = ["ble-debug"]
ble-wipe-on-boot = ["ble-debug"]

[[bin]]
name = "firmware-companion-ncp-t1000e"
# The protocol, security, transport-arbitration, and BLE implementation are
# shared with the T-Echo NCP. Board differences are selected by `t1000e`.
path = "../companion-ncp-techo/src/main.rs"

[dependencies]
umsh-bsp-nrf52840 = { path = "../../crates/umsh-bsp-nrf52840", default-features = false }
umsh-bsp-t1000e = { path = "../../crates/umsh-bsp-t1000e", default-features = false }
umsh-radio-loraphy = { path = "../../crates/umsh-radio-loraphy", default-features = false }
umsh-companion = { path = "../../crates/umsh-companion" }
umsh-companion-ncp = { path = "../../crates/umsh-companion-ncp" }
umsh-crypto = { path = "../../crates/umsh-crypto", default-features = false, features = ["software-crypto"] }
umsh-hal = { path = "../../crates/umsh-hal", default-features = false }
umsh-ux-tracker = { path = "../../crates/umsh-ux-tracker", default-features = false }
heapless = { version = "0.8", default-features = false }
heapless09 = { package = "heapless", version = "0.9", default-features = false }
# Ungated (host-buildable) because the shared radio_mux module uses them.
embassy-futures = { version = "0.1", default-features = false }
embassy-sync = { version = "0.8", default-features = false }

[target.'cfg(target_os = "none")'.dependencies]
cortex-m = { version = "0.7" }
cortex-m-rt = { version = "0.7", features = ["set-vtor"] }
embassy-executor = { version = "0.10", default-features = false, features = ["platform-cortex-m", "executor-thread", "embassy-time-driver"] }
embassy-time = { version = "0.5", default-features = false, features = ["tick-hz-32_768"] }
embassy-nrf = { version = "0.11", default-features = false, features = ["nrf52840", "time-driver-rtc1", "gpiote", "rt", "unstable-pac"] }
embassy-usb = { version = "0.6", default-features = false }
static_cell = "2"
lora-phy = { workspace = true }
embedded-hal-bus = { version = "0.3", default-features = false, features = ["async"] }
embedded-alloc = { version = "0.5", default-features = false }
defmt = "0.3"
nrf-mpsl = { version = "0.3", default-features = false, features = ["critical-section-impl"] }
nrf-sdc = { version = "0.4", default-features = false, features = ["nrf52840", "peripheral", "central"] }
trouble-host = { version = "0.7", default-features = false, features = ["derive", "peripheral", "gatt", "security", "default-packet-pool", "default-packet-pool-mtu-255"] }
# Device-identity generation: ChaCha20 CSPRNG seeded from the hardware
# TRNG at boot (the RNG peripheral itself belongs to the SDC at runtime).
rand_core = { workspace = true }
rand_chacha = { version = "0.3", default-features = false }
